ecmascript/parser/tests/typescript-errors/tsc/classes/constructorDeclarations/constructorParameters/readonlyReadonly/input.ts.stderr
error: Unexpected token `x`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/classes/constructorDeclarations/constructorParameters/readonlyReadonly/input.ts:2:23
  |
2 |     readonly readonly x: number;
  |                       ^

